# vc

./: .dockerignore  ARCHITECTURE_COMPARISON.md  DOCKER_DEPLOYMENT.md  Dockerfile  GSTREAMER_EXECUTIVE_SUMMARY.md  GSTREAMER_IMPLEMENTATION_GUIDE.md  GSTREAMER_INTEGRATION_ANALYSIS.md  GSTREAMER_QUICKSTART.md  README.md  REALTIME_V2_GUIDE.md  TRAINING_UI_GUIDE.md  UV_SETUP.md  app_realtime_v2.py  app_train_v2.py  client_utterance.py  docker-compose.yml  janus_seedvc_bridge.py  pyproject.toml  requirements-gstreamer.txt  seed_vc_wrapper.py  server.py  server_seedvc.py  test_gstreamer.py
client/: README.md  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.jsx
client/src/components/: VoiceConversion.css  VoiceConversion.jsx
client/src/hooks/: useJanusVoiceConversion.js
cloudformation/: README.md  seedvc-eks-cluster.yaml
janus-config/: README.md  janus.jcfg  janus.plugin.streaming.jcfg  janus.transport.websockets.jcfg
k8s/: README.md  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  service.yaml
modules/: gstreamer_bridge.py
terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
terraform/modules/eks/: main.tf  variables.tf
terraform/modules/vpc/: main.tf  variables.tf
